manifest/development/namespace.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: web-server
  labels:
    name: web-server
