manifest/development/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-server
  namespace: web-server
  labels:
    app.kubernetes.io/name: simple-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-web-server
    spec:
      containers:
        - name: simple-web-server
          image: <AWS ACCOUNT ID>.dkr.ecr.ap-northeast-1.amazonaws.com/dev/web-server:v1.0.0
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          ports:
          - containerPort: 8081
            name: backend-port
            protocol: TCP
