manifest/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: simple-web-server
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-server
  namespace: web-server
  labels:
    app.kubernetes.io/name: simple-web-server
  annotations:
    # ALB がバックエンドのセキュリティグループルールを管理する設定
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"

    # ALB のスキームをインターネット向けに設定
    alb.ingress.kubernetes.io/scheme: internet-facing

    # 使用するセキュリティグループの ID
    alb.ingress.kubernetes.io/security-groups: <Security Group ID>

    # ターゲットとして Pod の IP を使用
    alb.ingress.kubernetes.io/target-type: "ip"

    # HTTP のリスニングポート設定
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

    # ヘルスチェックのパス設定
    alb.ingress.kubernetes.io/healthcheck-path: "/healthz"

spec:
  ingressClassName: simple-web-server
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web-server
                port:
                  number: 80
